syntax = "proto3";

import "security.proto";

package moe.cdn.cweb;

option java_outer_classname = "TorrentTrustProtos";

message User {
  // An assertion of trust by the user
  message TrustAssertion {
    enum Trust { TRUSTED = 0; NOT_TRUSTED = 1; }
    Trust trust_assertion = 1;
    Key public_key = 2;
  }
  
  // A short handle that the user uses 
  // This can overlap with other user handles
  string handle = 1;
  
  Key public_key = 2;
  repeated TrustAssertion trusted = 3;
}

message SignedUser {
  User user = 1;
  
  // This signature must be signed with the same key as the public key in the user field
  Signature signature = 2;
}

message Vote {
  message Assertion {
    enum Rating { BAD = 0; GOOD = 1; }
    Rating rating = 1;
    string contentProperty = 2;
  }
  Hash content_hash = 1;
  
  Key owner_public_key = 2;
  
  repeated Assertion assertion = 3;
}

message SignedVote {  
  Vote vote = 1;
  Signature signature = 2;
}

message VoteHistory {
  Key owner_public_key = 1;
  repeated Hash content_hash = 2;
}

message SignedVoteHistory {
  VoteHistory history = 1;
  Signature signature = 2;
}